<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="label">VintageCalc</string>

    <string name="zero">0</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>

    <string name="clearEverything">CE</string>
    <string name="currencyConverter">CC</string>

    <string name="divide">/</string>
    <string name="multiply">X</string>
    <string name="add">+</string>
    <string name="subtract">-</string>

    <string name="dot">.</string>
    <string name="equal">=</string>

    <string name="currencyConverterTitle">Currency Converter</string>
    <string name="amount">Amount</string>
    <string name="eur">EUR: Euro</string>
    <string name="usd">USD: United States Dollar</string>
    <string name="currencyFrom">From</string>
    <string name="currencyTo">To</string>
    <string name="Submit">Convert</string>
    <string name="Cancel">Cancel</string>

    <string name="emptyFieldWarning">Please provide an amount to be converted</string>
    <string name="noInternetConnection">This functionality requires internet connection</string>
    <string name="errorMessage2">Error on currencies database communication.</string>
    <string name="errorMessage1">Failed to read latest currencies values.</string>
</resources>